Change log 1.4 (under development)
----------------------------------

Change log 1.3.8 (2010-05-13)
-----------------------------
* Fixed a bug in DeepCloner which caused a NullPointerException for arrays containing null values.
* Changed groupId of the PowerMock JUnit Rule project to org.powermock.modules.
* Included PowerMock rule in the released artifacts
* verifyNew with arguments no longer throws NullPointerException when missing expectation in the Mockito extension API.
* EasyMock API extension now supports mock creation of classes whose hashCode implementation depends on constructor initialization.
* It's now allowed to use verifyNew multiple times just as with verify in standard Mockito (issue 251)
* Mockito extension API now supports mocking and stubbing equals and hashcode.
* Fixed an issue in the core mock classloader that accidentally caused any previous deferred packages to be overwritten when adding new packages to be ignored.
* Upgraded to Javassist 3.12 (issue 254)
* Upgraded to TestNG 5.12 (issue 250)
* Improved error messages in TestNG when running inside Eclipse

Change log 1.3.7 (2010-03-22)
-----------------------------
* Added support for JUnit 4.8.1 (issue 226)
* Added support for Mockito 1.8.4
* Fixed so that a "mock name" is set in the Mockito extension API. Fixes NullPointerException when e.g. toString is invoked on a mock. (issue 239)
* Changed method signature on "mockStatic" to return void in the Mockito extension API.
* Fixed the "Internal error: Run delegates were 0" bug when using a test class hierarchy and the PowerMock JUnit runner when no tests are defined in a parent test class (issue 241).
* Added support for deep cloning objects containing self references using the DeepCloner.